test/files/neg/macro-invalidsig-tparams-bounds-b/Macros_Test_2.scala
object Macros {
  def foo[U <: Int] = macro Impls.foo[U]
}

object Test extends App {
  import Macros._
  foo[Int]
}